# cardinal

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust-ci.yml
cardinal/: package-lock.json
cardinal-sdk/: Cargo.toml
cardinal-sdk/src/: event_stream.rs
cardinal/src/: App.css  App.tsx  menu.ts  shortcuts.ts  tray.ts
cardinal/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
cardinal/src-tauri/src/: background.rs  commands.rs  external_search.rs  lib.rs
cardinal/src/__tests__/: App.contextMenu.test.tsx  App.searchNavigation.test.tsx  shortcuts.test.ts
cardinal/src/components/: FileRow.tsx  FilesTabContent.tsx  PreferencesOverlay.tsx  SearchBar.tsx  ShortcutSettingsOverlay.tsx  StateDisplay.tsx
cardinal/src/components/__tests__/: PreferencesOverlay.test.tsx  SearchBar.test.tsx  ShortcutSettingsOverlay.test.tsx  StateDisplay.test.tsx
cardinal/src/hooks/: useAppHotkeys.ts  useAppPreferences.ts  useAppWindowListeners.ts  useContextMenu.ts  useFileSearch.ts  useFilesTabState.ts  useIncludePaths.ts  useShortcutSettingsController.ts
cardinal/src/hooks/__tests__/: useAppHotkeys.test.ts  useAppPreferences.test.ts  useAppWindowListeners.test.ts  useContextMenu.test.tsx  useFileSearch.test.ts  useFilesTabState.test.ts  useIncludePaths.test.ts
cardinal/src/i18n/resources/: ar-SA.json  de-DE.json  en-US.json  es-ES.json  fr-FR.json  hi-IN.json  it-IT.json  ja-JP.json  ko-KR.json  pt-BR.json  ru-RU.json  tr-TR.json  uk-UA.json  zh-CN.json  zh-TW.json
cardinal/src/runtime/: tauriEventRuntime.ts
cardinal/src/types/: ipc.ts
cardinal/src/utils/: fileActions.ts  globalShortcuts.ts  keyboard.ts  shortcutCapture.ts  watchConfig.ts
cardinal/src/utils/__tests__/: shortcutCapture.test.ts
doc/inner/: project-overview.md  search-cache.md  search-cancellation.md  shortcut-customization.md  ui-dataflow.md
doc/pub/: search-syntax.ar-SA.md  search-syntax.de-DE.md  search-syntax.es-ES.md  search-syntax.fr-FR.md  search-syntax.hi-IN.md  search-syntax.it-IT.md  search-syntax.ja-JP.md  search-syntax.ko-KR.md  search-syntax.md  search-syntax.pt-BR.md  search-syntax.ru-RU.md  search-syntax.tr-TR.md  search-syntax.uk-UA.md  search-syntax.zh-CN.md  search-syntax.zh-TW.md
lsf/: Cargo.toml
lsf/src/: app.rs  cli.rs  main.rs  tui.rs
lsf/src/tui/: input.rs  keymap.rs  render.rs  state.rs
macos-metadata/: Cargo.toml
macos-metadata/src/: lib.rs
namepool/src/: lib.rs
namepool/tests/: fuzz_large.rs
search-cache/: Cargo.toml
search-cache/src/: cache.rs  query.rs
search-cache/src/tests/: date_volume.rs  query_logic.rs  traversal.rs
search-cache/tests/: boundary_limits_tests.rs  content_filter_comprehensive.rs  content_filter_spotlight.rs  edge_cases_comprehensive.rs  parent_infolder_filters.rs  query_matrix_big.rs  tag_filter.rs
search-cancel/src/: lib.rs
search-cancel/tests/: more.rs
was/src/: main.rs
