[package]
name = "lsf"
version = "0.1.0"
edition = "2024"

[dependencies]
fswalk.path = "../fswalk"
namepool.path = "../namepool"
cardinal-sdk.path = "../cardinal-sdk"
search-cache = { path = "../search-cache" }
query-segmentation.path = "../query-segmentation"
search-cancel = { path = "../search-cancel" }
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0.97"
crossbeam-channel = "0.5.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap-verbosity-flag = { version = "3.0.4", features = ["tracing"] }
rustyline = "18.0.0"
